fix attribute
